// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render as thumbnail 1`] = `
<div id="board-1" class="Board" isthumb="true">
  <transition-stub name="slideDown">
    <!---->
  </transition-stub>
  <div class="cells" style="grid-template-areas: 'a';">
    <cell-stub title="" content="" style="grid-area: a;"></cell-stub>
    <cell-stub title="" content=""></cell-stub>
  </div>
</div>
`;

exports[`render empty 1`] = `
<div id="board-1" class="Board">
  <transition-stub name="slideDown">
    <!---->
  </transition-stub>
  <div class="cells" style="grid-template-areas: 'a';"></div>
</div>
`;

exports[`render in edit mode 1`] = `
<div id="board-1" class="Board">
  <transition-stub name="slideDown">
    <boardtoolbar-stub board="[object Object]"></boardtoolbar-stub>
  </transition-stub>
  <div class="cells" style="grid-template-areas: 'a';">
    <cell-stub title="" content="" style="grid-area: a;"></cell-stub>
    <cell-stub title="" content=""></cell-stub>
  </div>
</div>
`;

exports[`render normal 1`] = `
<div id="board-1" class="Board">
  <transition-stub name="slideDown">
    <!---->
  </transition-stub>
  <div class="cells" style="grid-template-areas: 'a';">
    <cell-stub title="" content="" style="grid-area: a;"></cell-stub>
    <cell-stub title="" content=""></cell-stub>
  </div>
</div>
`;
